fix #247 and compiler plugin part of langchecker